fix spacing

--- a/css/stylehomepage.css
+++ b/css/stylehomepage.css
@@ -335,6 +335,7 @@ hr {
     }
     .middle h4 {
         top: -10px;
+        padding-bottom: 30px;
     }
     .paragraph_heading {
         margin-bottom: 0px;
